[metadata]
name = distmeta
version = 0.0
author = Michael Mulich
author_email = michael.mulich@gmail.com
summary = Python Distribute Metadata Library
home_page = https://bitbucket.org/pumazi/distmeta/
license = BSD

classifier =
    Development Status :: 1 - Planning
    License :: OSI Approved :: BSD License

requires_dist =
    Distutils2

# Testing Requires:
#    unittest2

[files]

