[metadata]
name = distmeta
version = 0.1
author = Michael Mulich
author_email = michael.mulich@gmail.com
summary = Python Distribute Metadata Library
home_page = https://bitbucket.org/pumazi/distmeta/
license = BSD

classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License

requires_dist =
    Distutils2

# Testing Requires:
#    unittest2

[files]

