[metadata]
name = pkgmeta
version = 1.0a1
author = Michael Mulich
author_email = michael.mulich@gmail.com
summary = Python Package Metadata Library
home_page = https://bitbucket.org/pumazi/pkgmeta/
license = BSD

classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License


[files]
package = pkgmeta
